Fix width cutoffs for mobile viewers

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     src: url("../fonts/Ubuntu/Ubuntu-Regular.ttf");
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
     .large-text {
         font-size: 26px;
     }
@@ -22,7 +22,7 @@
     }
 }
 
-@media screen and (min-width: 401px) {
+@media screen and (min-width: 601px) {
     .large-text {
         font-size: 36px;
     }
